@@ -185,7 +185,8 @@ or
 .TP 3
 login
 is optional, if not provided it defaults to
-.B anonymous
+.B anonymous.
+If the login string comports an @ it need to be escaped by \\\\ (a pair of backshashes) to avoid libdar considering it the hostname starting part. Exemple: login is me@here.com host is www.example.org gives: sftp://me\\\\@here.com@www.example.org/some/file. You may also need to escape the same way any other special characters like for exampl ecolumn (:) slash (/) if they are part of the login string.
 .TP 3
 password
 if login is provided, the associated password may be given after a column (:) but this exposes the secret password to other
@@ -1509,7 +1510,7 @@ DAR_DUC_PATH
 if set, dar looks for Dar User Command (DUC files, see -E, -F, -~, -= options) that do not have a fully qualified path in the directories listed in DAR_DUC_PATH. This variable receives a column (:) separated list of paths and looks in each of them in turn, up to the first file found under the requested name.
 .TP 10
 DAR_SFTP_KNOWNHOSTS_FILE
-if set, dar will not use the $HOME/.ssh/known_hosts file to check sftp remote server authenticity but the file given as value for this environment variable. Note that setting this variable to an empty string completely disable host validation, which is not recommended. Dar the command line interface program for dar archive relies on libdar for archive format management which relies on libcurl for network transfer which in turn relies on libssh2 for all that concerns sftp protocol. In the known_hosts file, libssh2 does not support recent lines like those with "ecdsa-sha2-nistp256" in second argument but only supports "ssh-rsa" lines. Check libssh2 documentations and litterature for more details about that limitation.
+if set, dar will not use the $HOME/.ssh/known_hosts file to check sftp remote server authenticity but the file given as value for this environment variable. Note that setting this variable to an empty string completely disable host validation, which is not recommended. Dar, the command line interface program for dar archive relies on libdar for archive format management which relies on libcurl for network transfer which in turn relies on libssh2 for all that concerns sftp protocol. In the known_hosts file, libssh2 does not support recent lines like those with "ecdsa-sha2-nistp256" in second argument but only supports "ssh-rsa" lines. Check libssh2 documentations and litterature for more details about that limitation. To workaround this limitation you need to disable known hosts validation or set up a restricted known hosts file without any "ecdsa*" entry and have DAR_SFTP_KNOWNHOSTS_FILE pointing to it.
 .TP 10
 DAR_SFTP_PUBLIC_KEYFILE
 by default dar will fetch the public key file in $HOME/.ssh/id_rsa.pub file. If you use the former id_dsa.pub or more recent key types you need to set this environment variable to point to the appropriated filename
