@@ -19,6 +19,8 @@ from 2.6.1 to 2.6.2
   permission dar has been granted for a restoration operation.
 - feature enhancement: added option to specify the block size used to
   create delta signature.
+- feature enhancement: added the ability to provide login for sftp/ftp
+  remote access, that contain @ and other special characters.
 
 from 2.6.0 to 2.6.1
 - fixed error in man page
